Removing ajax call required for operation type views Ajax calling was adding too many weird issues, instead load all view and display:none. When user changes operation type we use jquery to move the view into a visible area.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -16771,6 +16771,10 @@ p {
   font-weight: bold;
 }
 
+.detail-view {
+  display: none;
+}
+
 @media (min-width: 992px) {
   #character-selector {
     padding: 30px;
