--- a/resources/assets/sass/_custom.scss
+++ b/resources/assets/sass/_custom.scss
@@ -86,6 +86,10 @@ h1, h2, h3, h4, h5, h6, p {
     font-weight:bold;
 }
 
+.detail-view {
+    display:none;
+}
+
 @media (min-width: 992px) {
     #character-selector {
         padding:30px;
